# literal_t

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  LangulusUtilities.cmake  README.md
.github/workflows/: ci.yml
include/Langulus/: Literal.hpp
test/: CMakeLists.txt  main.cpp  test_literal_t.cpp
